Fix spacing from navbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,12 @@
     background-repeat: no-repeat;
   }
 
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
   h1,
   h2,
   h3 {
